# Covert-Channels

./: TheHitchhikersGuideToAddingEntities.txt
client/: client_watch.sh  package-lock.json  package.json
client/public/: index.html
client/src/: setupTests.js  styles.scss
client/src/screens/: ConfigScreen.jsx  ConfigScreen.test.jsx  Console.scss  HelpScreen.jsx  MessagingScreen.test.jsx
client/src/ui-components/: Checkbox.jsx  StringInput.jsx
controller/: controller.go  controller_test.go
controller/channel/embedders/: ipEmbedders.go  mask.go  mask_test.go
controller/channel/icmpIP/: embedders.go  icmpIP_config.go
controller/channel/tcpHandshake/: embedders.go  tcpHandshake.go  tcpHandshake_config.go
controller/channel/tcpSyn/: tcpSyn.go  (+1 more)
controller/config/: config_util.go
controller/processor/: processor.go
covert_frontend/: package-lock.json  package.json
covert_frontend/src/: App.tsx
examples/: tcpLocalSend.go
go_covert_lib/: .gitignore  CONTRIBUTING.md  README.md  ReadMe.md  build_watch.sh  main.go  receiver.go  sender.go  test.html
go_covert_lib/client/: .eslintrc.json  README.md  package-lock.json  package.json
go_covert_lib/controller/: controller.go  controller_open.go  controller_test.go  controller_types.go  controller_websocket.go
go_covert_lib/examples/: tcpLocalReceive.go  tcpLocalSend.go
go_covert_lib/ipv4TCP/: ipv4_tcp_sequence.go  ipv4_tcp_sequence_test.go
rust_covert_lib/: Cargo.toml  ReadMe.md
rust_covert_lib/examples/: example_utils.rs  receiver.rs  sender.rs
rust_covert_lib/src/: ipv4_tcp_sequence.rs  lib.rs
(+106 files in other folders)
