[package]
name = "covert"
version = "0.1.0"
authors = ["michael <michaelwdysart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pnet]
version = "0.22.0"

[dependencies.rand]
version = "0.3"

[dependencies.clap]
version = "2.27.0"

[dependencies.crossbeam]
version = "0.7.2"

[dependencies.crossbeam-channel]
version = "0.3.9"

[dependencies.socket2]
version = "0.3.11"

[dependencies.cancellable-timer]
version = "0.1.0"
